--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-zhirrr",
+  "name": "api-bots",
   "version": "1.0.0",
   "description": "My Rest Api Projectttttt",
   "main": "index.js",
